// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusText /> can pass props to underlying \`Text\` 1`] = `
<h4
  className="text-0-2-7 text_large-0-2-13"
>
  <span
    className="text_muted-0-2-3"
  >
    Text
  </span>
</h4>
`;

exports[`<StatusText /> statuses renders text 1`] = `
<div
  className="text-0-2-7"
>
  <span
    className="text_notice-0-2-4"
  >
    notice
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 2`] = `
<div
  className="text-0-2-7"
>
  <span
    className="text_info-0-2-2"
  >
    info
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 3`] = `
<div
  className="text-0-2-7"
>
  <span
    className="text_success-0-2-5"
  >
    success
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 4`] = `
<div
  className="text-0-2-7"
>
  <span
    className="text_warning-0-2-6"
  >
    warning
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 5`] = `
<div
  className="text-0-2-7"
>
  <span
    className="text_danger-0-2-1"
  >
    danger
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 6`] = `
<div
  className="text-0-2-7"
>
  <span
    className="text_muted-0-2-3"
  >
    muted
  </span>
</div>
`;
